src/component/EventCard.module.css
.card {
  padding-bottom: 0.5em;
  margin-bottom: 1em;
  border-bottom: solid #e8e8e8 1px;
  font-size: 1.1em;
}

.card > div {
  margin-bottom: 0.8em;
}

.title {
  margin-bottom: 0.8em;
  margin-top: 0;
  font-weight: 500;
  color: #453257;
}

.header {
  display: grid;
  grid-template-columns: 2em 1fr auto;
  align-items: center;
}

.userPicture {
  width: 1.5em;
  height: 1.5em;
}

.date {
  font-size: 0.9em;
  display: grid;
  grid-template-columns: 1.5em 1fr;
  align-items: center;
}

.dateIcon {
  width: 1.2em;
  height: 1.2em;
  display: inline-block;
}

.channel {
  color: #8560a9;
  padding: 0.2em 0.8em;
  border: solid #8560a9 1px;
  border-radius: 1em;
}

.description {
  color: #67616d;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.footer {
  display: grid;
  grid-template-columns: auto auto 1fr;
  column-gap: 1em;
}

.footer .icon {
  width: 1em;
  height: 1em;
}

.button {
  display: grid;
  grid-template-columns: 1.5em auto;
}

